test/parser/should_succeed/while5.souc
main() = do
    while true do
        print "sub call"
        if "nested"
            print "hello"
            print "another sub call"
        else
            explode
    end while
