test/parser/should_fail/until3.souc
main() = do
    until true do
    until false do
        print "sub call"
        explode
